Fix handling of "SET TRANSACTION ISOLATION LEVEL ...". (Bug #7955)

mysql-test/r/bdb.result:
  Add results
mysql-test/t/bdb.test:
  Add new test
sql/set_var.cc:
  Refuse attempts to change tx_isolation while a transaction is in progress.
sql/set_var.h:
  Support check function for sys_var_thd_enum
sql/share/errmsg.txt:
  Add new error message
sql/sql_yacc.yy:
  Make sure that lex->option_type always gets set in 'SET TRANSACTION ...'