sql/set_var.h
@@ -325,19 +325,31 @@ class sys_var_thd_enum :public sys_var_thd
 protected:
   ulong SV::*offset;
   TYPELIB *enum_names;
+  sys_check_func check_func;
 public:
   sys_var_thd_enum(const char *name_arg, ulong SV::*offset_arg,
 		   TYPELIB *typelib)
-    :sys_var_thd(name_arg), offset(offset_arg), enum_names(typelib)
+    :sys_var_thd(name_arg), offset(offset_arg), enum_names(typelib),
+    check_func(0)
   {}
   sys_var_thd_enum(const char *name_arg, ulong SV::*offset_arg,
 		   TYPELIB *typelib,
 		   sys_after_update_func func)
-    :sys_var_thd(name_arg,func), offset(offset_arg), enum_names(typelib)
+    :sys_var_thd(name_arg,func), offset(offset_arg), enum_names(typelib),
+    check_func(0)
+  {}
+  sys_var_thd_enum(const char *name_arg, ulong SV::*offset_arg,
+		   TYPELIB *typelib, sys_after_update_func func,
+                   sys_check_func check)
+    :sys_var_thd(name_arg,func), offset(offset_arg), enum_names(typelib),
+    check_func(check)
   {}
   bool check(THD *thd, set_var *var)
   {
-    return check_enum(thd, var, enum_names);
+    int ret= 0;
+    if (check_func)
+      ret= (*check_func)(thd, var);
+    return ret ? ret : check_enum(thd, var, enum_names);
   }
   bool update(THD *thd, set_var *var);
   void set_default(THD *thd, enum_var_type type);
